<resources>
    <string name="app_name">SignUpLogin</string>
    <!--LoginActivity-->
    <string name="myapp">MyApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <!--RegisterActivity-->
    <string name="back_login">Back to login</string>
    <string name="login_out">Logout</string>
</resources>
