<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    tools:context="com.admin.signuplogin.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:text="@string/myapp" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:background="#1976D2"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
        android:drawablePadding="16dp"
        android:drawableTint="@color/white"
        android:hint="@string/email"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#1976D2"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:padding="10dp"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:drawablePadding="16dp"
        android:drawableTint="@color/white"
        android:hint="@string/password" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#4FC3F7"
        android:textColor="@color/white"
        android:text="@string/login" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="#4FC3F7"
        android:textColor="@color/white"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center">

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:tint="@color/white"
            android:background="@drawable/circle_button"
            android:src="@drawable/facebook"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:background="@drawable/circle_button"
            android:src="@drawable/google_plus"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:background="@drawable/circle_button"
            android:src="@drawable/twitter"
            tools:ignore="ContentDescription" />

    </LinearLayout>

</LinearLayout>
